Fix responsive issues on smaller screens for footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ h2 {
     font-family: 'Roboto Mono';
     font-weight: 700;
     color: #042434;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 
 p {
@@ -93,7 +93,7 @@ p {
 }
 
 .contact-image {
-    min-height: 40vw;
+    min-height: 32vw;
     margin: 20px;
     transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -144,14 +144,21 @@ p {
     background-size: cover;
     min-height: 300px;
     min-width: 300px;
+    margin: 15px 0;
+}
+
+.text-image-container {
     margin: 30px 0;
 }
 
-
 #about-me-text {
     max-width: 700px;
-    margin-top: 30px;
+    margin-top: 15px;
     padding-left: 10px;
+}
+
+.btn-container {
+    padding: 20px;
 }
 
 #about-me-cta {
@@ -239,6 +246,20 @@ form {
 
 .footer-container {
     background-color: #042434;
+    position: relative;
+    top: 100px;
+}
+
+.content {
+    min-height: 100%;
+    margin-bottom: -50px;
+    /* Set the negative value of footer height */
+}
+
+.footer {
+    height: 50px;
+    /* Adjust the height as needed */
+    background-color: #f5f5f5;
 }
 
 .icons {
@@ -254,6 +275,9 @@ form {
 }
 
 @media only screen and (min-width: 992px) {
+    #nav-title {
+        font-size: 2rem;
+    }
 
     .contact-image {
         background-size: cover;
